--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,4 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/dbt,visualstudiocode,python
 .user.yml
+bsky_analytics.duckdb
