--- a/dependencies.yml
+++ b/dependencies.yml
@@ -1,5 +1,5 @@
 packages:
-  #- git: "https://github.com/geoHeil/dbt-atproto.git"
-  #  revision: 1.0.0
-
-  - local: ../dbt-atproto
+  - git: "https://github.com/geoHeil/dbt-atproto.git"
+    #revision: 1.0.0
+    #branch: main
+  #- local: ../dbt-atproto
